libmemcached/libmemcached/csl/parser.output
Terminals unused in grammar

   SERVERS
   SERVERS_OPTION
   UNKNOWN_OPTION
   UNKNOWN
   KETAMA_HASH
   KETAMA_WEIGHTED
   CSL_TRUE
   CSL_FALSE
   '='
   CSL_FLOAT
   FILE_PATH


Grammar

    0 $accept: begin $end

    1 begin: statement
    2      | begin ' ' statement

    3 statement: expression
    4          | COMMENT
    5          | EMPTY_LINE
    6          | END
    7          | CSL_ERROR
    8          | RESET
    9          | PARSER_DEBUG
   10          | INCLUDE ' ' string

   11 expression: SERVER HOSTNAME optional_port optional_weight
   12           | SERVER IPADDRESS optional_port optional_weight
   13           | CSL_SOCKET string optional_weight
   14           | CONFIGURE_FILE string
   15           | POOL_MIN NUMBER
   16           | POOL_MAX NUMBER
   17           | behaviors

   18 behaviors: NAMESPACE string
   19          | FETCH_VERSION
   20          | DISTRIBUTION distribution
   21          | DISTRIBUTION distribution ',' hash
   22          | HASH hash
   23          | behavior_number NUMBER
   24          | behavior_boolean
   25          | USER_DATA

   26 behavior_number: REMOVE_FAILED_SERVERS
   27                | CONNECT_TIMEOUT
   28                | IO_MSG_WATERMARK
   29                | IO_BYTES_WATERMARK
   30                | IO_KEY_PREFETCH
   31                | NUMBER_OF_REPLICAS
   32                | POLL_TIMEOUT
   33                | RCV_TIMEOUT
   34                | RETRY_TIMEOUT
   35                | SND_TIMEOUT
   36                | SOCKET_RECV_SIZE
   37                | SOCKET_SEND_SIZE

   38 behavior_boolean: BINARY_PROTOCOL
   39                 | BUFFER_REQUESTS
   40                 | HASH_WITH_NAMESPACE
   41                 | NOREPLY
   42                 | RANDOMIZE_REPLICA_READ
   43                 | SORT_HOSTS
   44                 | SUPPORT_CAS
   45                 | _TCP_NODELAY
   46                 | _TCP_KEEPALIVE
   47                 | _TCP_KEEPIDLE
   48                 | USE_UDP
   49                 | VERIFY_KEY

   50 optional_port: /* empty */
   51              | PORT

   52 optional_weight: /* empty */
   53                | WEIGHT_START

   54 hash: MD5
   55     | CRC
   56     | FNV1_64
   57     | FNV1A_64
   58     | FNV1_32
   59     | FNV1A_32
   60     | HSIEH
   61     | MURMUR
   62     | JENKINS

   63 string: STRING
   64       | QUOTED_STRING

   65 distribution: CONSISTENT
   66             | MODULA
   67             | RANDOM


Terminals, with rules where they appear

$end (0) 0
' ' (32) 2 10
',' (44) 21
'=' (61)
error (256)
COMMENT (258) 4
END (259) 6
CSL_ERROR (260) 7
RESET (261) 8
PARSER_DEBUG (262) 9
INCLUDE (263) 10
CONFIGURE_FILE (264) 14
EMPTY_LINE (265) 5
SERVER (266) 11 12
CSL_SOCKET (267) 13
SERVERS (268)
SERVERS_OPTION (269)
UNKNOWN_OPTION (270)
UNKNOWN (271)
BINARY_PROTOCOL (272) 38
BUFFER_REQUESTS (273) 39
CONNECT_TIMEOUT (274) 27
DISTRIBUTION (275) 20 21
HASH (276) 22
HASH_WITH_NAMESPACE (277) 40
IO_BYTES_WATERMARK (278) 29
IO_KEY_PREFETCH (279) 30
IO_MSG_WATERMARK (280) 28
KETAMA_HASH (281)
KETAMA_WEIGHTED (282)
NOREPLY (283) 41
NUMBER_OF_REPLICAS (284) 31
POLL_TIMEOUT (285) 32
RANDOMIZE_REPLICA_READ (286) 42
RCV_TIMEOUT (287) 33
REMOVE_FAILED_SERVERS (288) 26
RETRY_TIMEOUT (289) 34
SND_TIMEOUT (290) 35
SOCKET_RECV_SIZE (291) 36
SOCKET_SEND_SIZE (292) 37
SORT_HOSTS (293) 43
SUPPORT_CAS (294) 44
USER_DATA (295) 25
USE_UDP (296) 48
VERIFY_KEY (297) 49
_TCP_KEEPALIVE (298) 46
_TCP_KEEPIDLE (299) 47
_TCP_NODELAY (300) 45
FETCH_VERSION (301) 19
NAMESPACE (302) 18
POOL_MIN (303) 15
POOL_MAX (304) 16
MD5 (305) 54
CRC (306) 55
FNV1_64 (307) 56
FNV1A_64 (308) 57
FNV1_32 (309) 58
FNV1A_32 (310) 59
HSIEH (311) 60
MURMUR (312) 61
JENKINS (313) 62
CONSISTENT (314) 65
MODULA (315) 66
RANDOM (316) 67
CSL_TRUE (317)
CSL_FALSE (318)
CSL_FLOAT (319)
NUMBER (320) 15 16 23
PORT (321) 51
WEIGHT_START (322) 53
IPADDRESS (323) 12
HOSTNAME (324) 11
STRING (325) 63
QUOTED_STRING (326) 64
FILE_PATH (327)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
begin (77)
    on left: 1 2, on right: 0 2
statement (78)
    on left: 3 4 5 6 7 8 9 10, on right: 1 2
expression (79)
    on left: 11 12 13 14 15 16 17, on right: 3
behaviors (80)
    on left: 18 19 20 21 22 23 24 25, on right: 17
behavior_number (81)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37, on right: 23
behavior_boolean (82)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49, on right: 24
optional_port (83)
    on left: 50 51, on right: 11 12
optional_weight (84)
    on left: 52 53, on right: 11 12 13
hash (85)
    on left: 54 55 56 57 58 59 60 61 62, on right: 21 22
string (86)
    on left: 63 64, on right: 10 13 14 18
distribution (87)
    on left: 65 66 67, on right: 20 21


state 0

    0 $accept: . begin $end

    COMMENT                 shift, and go to state 1
    END                     shift, and go to state 2
    CSL_ERROR               shift, and go to state 3
    RESET                   shift, and go to state 4
    PARSER_DEBUG            shift, and go to state 5
    INCLUDE                 shift, and go to state 6
    CONFIGURE_FILE          shift, and go to state 7
    EMPTY_LINE              shift, and go to state 8
    SERVER                  shift, and go to state 9
    CSL_SOCKET              shift, and go to state 10
    BINARY_PROTOCOL         shift, and go to state 11
    BUFFER_REQUESTS         shift, and go to state 12
    CONNECT_TIMEOUT         shift, and go to state 13
    DISTRIBUTION            shift, and go to state 14
    HASH                    shift, and go to state 15
    HASH_WITH_NAMESPACE     shift, and go to state 16
    IO_BYTES_WATERMARK      shift, and go to state 17
    IO_KEY_PREFETCH         shift, and go to state 18
    IO_MSG_WATERMARK        shift, and go to state 19
    NOREPLY                 shift, and go to state 20
    NUMBER_OF_REPLICAS      shift, and go to state 21
    POLL_TIMEOUT            shift, and go to state 22
    RANDOMIZE_REPLICA_READ  shift, and go to state 23
    RCV_TIMEOUT             shift, and go to state 24
    REMOVE_FAILED_SERVERS   shift, and go to state 25
    RETRY_TIMEOUT           shift, and go to state 26
    SND_TIMEOUT             shift, and go to state 27
    SOCKET_RECV_SIZE        shift, and go to state 28
    SOCKET_SEND_SIZE        shift, and go to state 29
    SORT_HOSTS              shift, and go to state 30
    SUPPORT_CAS             shift, and go to state 31
    USER_DATA               shift, and go to state 32
    USE_UDP                 shift, and go to state 33
    VERIFY_KEY              shift, and go to state 34
    _TCP_KEEPALIVE          shift, and go to state 35
    _TCP_KEEPIDLE           shift, and go to state 36
    _TCP_NODELAY            shift, and go to state 37
    FETCH_VERSION           shift, and go to state 38
    NAMESPACE               shift, and go to state 39
    POOL_MIN                shift, and go to state 40
    POOL_MAX                shift, and go to state 41

    begin             go to state 42
    statement         go to state 43
    expression        go to state 44
    behaviors         go to state 45
    behavior_number   go to state 46
    behavior_boolean  go to state 47


state 1

    4 statement: COMMENT .

    $default  reduce using rule 4 (statement)


state 2

    6 statement: END .

    $default  reduce using rule 6 (statement)


state 3

    7 statement: CSL_ERROR .

    $default  reduce using rule 7 (statement)


state 4

    8 statement: RESET .

    $default  reduce using rule 8 (statement)


state 5

    9 statement: PARSER_DEBUG .

    $default  reduce using rule 9 (statement)


state 6

   10 statement: INCLUDE . ' ' string

    ' '  shift, and go to state 48


state 7

   14 expression: CONFIGURE_FILE . string

    STRING         shift, and go to state 49
    QUOTED_STRING  shift, and go to state 50

    string  go to state 51


state 8

    5 statement: EMPTY_LINE .

    $default  reduce using rule 5 (statement)


state 9

   11 expression: SERVER . HOSTNAME optional_port optional_weight
   12           | SERVER . IPADDRESS optional_port optional_weight

    IPADDRESS  shift, and go to state 52
    HOSTNAME   shift, and go to state 53


state 10

   13 expression: CSL_SOCKET . string optional_weight

    STRING         shift, and go to state 49
    QUOTED_STRING  shift, and go to state 50

    string  go to state 54


state 11

   38 behavior_boolean: BINARY_PROTOCOL .

    $default  reduce using rule 38 (behavior_boolean)


state 12

   39 behavior_boolean: BUFFER_REQUESTS .

    $default  reduce using rule 39 (behavior_boolean)


state 13

   27 behavior_number: CONNECT_TIMEOUT .

    $default  reduce using rule 27 (behavior_number)


state 14

   20 behaviors: DISTRIBUTION . distribution
   21          | DISTRIBUTION . distribution ',' hash

    CONSISTENT  shift, and go to state 55
    MODULA      shift, and go to state 56
    RANDOM      shift, and go to state 57

    distribution  go to state 58


state 15

   22 behaviors: HASH . hash

    MD5       shift, and go to state 59
    CRC       shift, and go to state 60
    FNV1_64   shift, and go to state 61
    FNV1A_64  shift, and go to state 62
    FNV1_32   shift, and go to state 63
    FNV1A_32  shift, and go to state 64
    HSIEH     shift, and go to state 65
    MURMUR    shift, and go to state 66
    JENKINS   shift, and go to state 67

    hash  go to state 68


state 16

   40 behavior_boolean: HASH_WITH_NAMESPACE .

    $default  reduce using rule 40 (behavior_boolean)


state 17

   29 behavior_number: IO_BYTES_WATERMARK .

    $default  reduce using rule 29 (behavior_number)


state 18

   30 behavior_number: IO_KEY_PREFETCH .

    $default  reduce using rule 30 (behavior_number)


state 19

   28 behavior_number: IO_MSG_WATERMARK .

    $default  reduce using rule 28 (behavior_number)


state 20

   41 behavior_boolean: NOREPLY .

    $default  reduce using rule 41 (behavior_boolean)


state 21

   31 behavior_number: NUMBER_OF_REPLICAS .

    $default  reduce using rule 31 (behavior_number)


state 22

   32 behavior_number: POLL_TIMEOUT .

    $default  reduce using rule 32 (behavior_number)


state 23

   42 behavior_boolean: RANDOMIZE_REPLICA_READ .

    $default  reduce using rule 42 (behavior_boolean)


state 24

   33 behavior_number: RCV_TIMEOUT .

    $default  reduce using rule 33 (behavior_number)


state 25

   26 behavior_number: REMOVE_FAILED_SERVERS .

    $default  reduce using rule 26 (behavior_number)


state 26

   34 behavior_number: RETRY_TIMEOUT .

    $default  reduce using rule 34 (behavior_number)


state 27

   35 behavior_number: SND_TIMEOUT .

    $default  reduce using rule 35 (behavior_number)


state 28

   36 behavior_number: SOCKET_RECV_SIZE .

    $default  reduce using rule 36 (behavior_number)


state 29

   37 behavior_number: SOCKET_SEND_SIZE .

    $default  reduce using rule 37 (behavior_number)


state 30

   43 behavior_boolean: SORT_HOSTS .

    $default  reduce using rule 43 (behavior_boolean)


state 31

   44 behavior_boolean: SUPPORT_CAS .

    $default  reduce using rule 44 (behavior_boolean)


state 32

   25 behaviors: USER_DATA .

    $default  reduce using rule 25 (behaviors)


state 33

   48 behavior_boolean: USE_UDP .

    $default  reduce using rule 48 (behavior_boolean)


state 34

   49 behavior_boolean: VERIFY_KEY .

    $default  reduce using rule 49 (behavior_boolean)


state 35

   46 behavior_boolean: _TCP_KEEPALIVE .

    $default  reduce using rule 46 (behavior_boolean)


state 36

   47 behavior_boolean: _TCP_KEEPIDLE .

    $default  reduce using rule 47 (behavior_boolean)


state 37

   45 behavior_boolean: _TCP_NODELAY .

    $default  reduce using rule 45 (behavior_boolean)


state 38

   19 behaviors: FETCH_VERSION .

    $default  reduce using rule 19 (behaviors)


state 39

   18 behaviors: NAMESPACE . string

    STRING         shift, and go to state 49
    QUOTED_STRING  shift, and go to state 50

    string  go to state 69


state 40

   15 expression: POOL_MIN . NUMBER

    NUMBER  shift, and go to state 70


state 41

   16 expression: POOL_MAX . NUMBER

    NUMBER  shift, and go to state 71


state 42

    0 $accept: begin . $end
    2 begin: begin . ' ' statement

    $end  shift, and go to state 72
    ' '   shift, and go to state 73


state 43

    1 begin: statement .

    $default  reduce using rule 1 (begin)


state 44

    3 statement: expression .

    $default  reduce using rule 3 (statement)


state 45

   17 expression: behaviors .

    $default  reduce using rule 17 (expression)


state 46

   23 behaviors: behavior_number . NUMBER

    NUMBER  shift, and go to state 74


state 47

   24 behaviors: behavior_boolean .

    $default  reduce using rule 24 (behaviors)


state 48

   10 statement: INCLUDE ' ' . string

    STRING         shift, and go to state 49
    QUOTED_STRING  shift, and go to state 50

    string  go to state 75


state 49

   63 string: STRING .

    $default  reduce using rule 63 (string)


state 50

   64 string: QUOTED_STRING .

    $default  reduce using rule 64 (string)


state 51

   14 expression: CONFIGURE_FILE string .

    $default  reduce using rule 14 (expression)


state 52

   12 expression: SERVER IPADDRESS . optional_port optional_weight

    PORT  shift, and go to state 76

    $default  reduce using rule 50 (optional_port)

    optional_port  go to state 77


state 53

   11 expression: SERVER HOSTNAME . optional_port optional_weight

    PORT  shift, and go to state 76

    $default  reduce using rule 50 (optional_port)

    optional_port  go to state 78


state 54

   13 expression: CSL_SOCKET string . optional_weight

    WEIGHT_START  shift, and go to state 79

    $default  reduce using rule 52 (optional_weight)

    optional_weight  go to state 80


state 55

   65 distribution: CONSISTENT .

    $default  reduce using rule 65 (distribution)


state 56

   66 distribution: MODULA .

    $default  reduce using rule 66 (distribution)


state 57

   67 distribution: RANDOM .

    $default  reduce using rule 67 (distribution)


state 58

   20 behaviors: DISTRIBUTION distribution .
   21          | DISTRIBUTION distribution . ',' hash

    ','  shift, and go to state 81

    $default  reduce using rule 20 (behaviors)


state 59

   54 hash: MD5 .

    $default  reduce using rule 54 (hash)


state 60

   55 hash: CRC .

    $default  reduce using rule 55 (hash)


state 61

   56 hash: FNV1_64 .

    $default  reduce using rule 56 (hash)


state 62

   57 hash: FNV1A_64 .

    $default  reduce using rule 57 (hash)


state 63

   58 hash: FNV1_32 .

    $default  reduce using rule 58 (hash)


state 64

   59 hash: FNV1A_32 .

    $default  reduce using rule 59 (hash)


state 65

   60 hash: HSIEH .

    $default  reduce using rule 60 (hash)


state 66

   61 hash: MURMUR .

    $default  reduce using rule 61 (hash)


state 67

   62 hash: JENKINS .

    $default  reduce using rule 62 (hash)


state 68

   22 behaviors: HASH hash .

    $default  reduce using rule 22 (behaviors)


state 69

   18 behaviors: NAMESPACE string .

    $default  reduce using rule 18 (behaviors)


state 70

   15 expression: POOL_MIN NUMBER .

    $default  reduce using rule 15 (expression)


state 71

   16 expression: POOL_MAX NUMBER .

    $default  reduce using rule 16 (expression)


state 72

    0 $accept: begin $end .

    $default  accept


state 73

    2 begin: begin ' ' . statement

    COMMENT                 shift, and go to state 1
    END                     shift, and go to state 2
    CSL_ERROR               shift, and go to state 3
    RESET                   shift, and go to state 4
    PARSER_DEBUG            shift, and go to state 5
    INCLUDE                 shift, and go to state 6
    CONFIGURE_FILE          shift, and go to state 7
    EMPTY_LINE              shift, and go to state 8
    SERVER                  shift, and go to state 9
    CSL_SOCKET              shift, and go to state 10
    BINARY_PROTOCOL         shift, and go to state 11
    BUFFER_REQUESTS         shift, and go to state 12
    CONNECT_TIMEOUT         shift, and go to state 13
    DISTRIBUTION            shift, and go to state 14
    HASH                    shift, and go to state 15
    HASH_WITH_NAMESPACE     shift, and go to state 16
    IO_BYTES_WATERMARK      shift, and go to state 17
    IO_KEY_PREFETCH         shift, and go to state 18
    IO_MSG_WATERMARK        shift, and go to state 19
    NOREPLY                 shift, and go to state 20
    NUMBER_OF_REPLICAS      shift, and go to state 21
    POLL_TIMEOUT            shift, and go to state 22
    RANDOMIZE_REPLICA_READ  shift, and go to state 23
    RCV_TIMEOUT             shift, and go to state 24
    REMOVE_FAILED_SERVERS   shift, and go to state 25
    RETRY_TIMEOUT           shift, and go to state 26
    SND_TIMEOUT             shift, and go to state 27
    SOCKET_RECV_SIZE        shift, and go to state 28
    SOCKET_SEND_SIZE        shift, and go to state 29
    SORT_HOSTS              shift, and go to state 30
    SUPPORT_CAS             shift, and go to state 31
    USER_DATA               shift, and go to state 32
    USE_UDP                 shift, and go to state 33
    VERIFY_KEY              shift, and go to state 34
    _TCP_KEEPALIVE          shift, and go to state 35
    _TCP_KEEPIDLE           shift, and go to state 36
    _TCP_NODELAY            shift, and go to state 37
    FETCH_VERSION           shift, and go to state 38
    NAMESPACE               shift, and go to state 39
    POOL_MIN                shift, and go to state 40
    POOL_MAX                shift, and go to state 41

    statement         go to state 82
    expression        go to state 44
    behaviors         go to state 45
    behavior_number   go to state 46
    behavior_boolean  go to state 47


state 74

   23 behaviors: behavior_number NUMBER .

    $default  reduce using rule 23 (behaviors)


state 75

   10 statement: INCLUDE ' ' string .

    $default  reduce using rule 10 (statement)


state 76

   51 optional_port: PORT .

    $default  reduce using rule 51 (optional_port)


state 77

   12 expression: SERVER IPADDRESS optional_port . optional_weight

    WEIGHT_START  shift, and go to state 79

    $default  reduce using rule 52 (optional_weight)

    optional_weight  go to state 83


state 78

   11 expression: SERVER HOSTNAME optional_port . optional_weight

    WEIGHT_START  shift, and go to state 79

    $default  reduce using rule 52 (optional_weight)

    optional_weight  go to state 84


state 79

   53 optional_weight: WEIGHT_START .

    $default  reduce using rule 53 (optional_weight)


state 80

   13 expression: CSL_SOCKET string optional_weight .

    $default  reduce using rule 13 (expression)


state 81

   21 behaviors: DISTRIBUTION distribution ',' . hash

    MD5       shift, and go to state 59
    CRC       shift, and go to state 60
    FNV1_64   shift, and go to state 61
    FNV1A_64  shift, and go to state 62
    FNV1_32   shift, and go to state 63
    FNV1A_32  shift, and go to state 64
    HSIEH     shift, and go to state 65
    MURMUR    shift, and go to state 66
    JENKINS   shift, and go to state 67

    hash  go to state 85


state 82

    2 begin: begin ' ' statement .

    $default  reduce using rule 2 (begin)


state 83

   12 expression: SERVER IPADDRESS optional_port optional_weight .

    $default  reduce using rule 12 (expression)


state 84

   11 expression: SERVER HOSTNAME optional_port optional_weight .

    $default  reduce using rule 11 (expression)


state 85

   21 behaviors: DISTRIBUTION distribution ',' hash .

    $default  reduce using rule 21 (behaviors)
